--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-token="PLACE_BOT_TOKEN"
-prefix="PLACE_BOT_PREFIX"
-clientId="USER_CLIENT_ID"
-mongoURL="PLACE_MONGODB_DATABASE_URL"
+token="MTE0MTI3NzEzNzgxOTY3MjYzNw.GKYS5I.ceoK-EBV9RKSgPutql5I7bgSygyRfWapXf9Ia0"
+prefix="."
+clientId="1141277137819672637"
+mongoURL="mongodb+srv://Noxious:Lullaby1994@cluster0.7pgxbjx.mongodb.net/?retryWrites=true&w=majority"
